# MadPy

./: .gitignore  .gitmodules  MG5_debug  README.md  madgraph-manipulate-events.ipynb  py.py  pyproject.toml  requirements.txt
notebooks/: ALP_ST.mg5  ALP_TT.mg5  ALP_v0.mg5  MG5_debug  dm_process.mg5  dm_process_ee.mg5  maddm-manipulate-events.ipynb  maddm_script.txt  madgraph-manipulate-events-axitop.ipynb  madgraph-manipulate-events.ipynb  mg5_log.txt  new_process.mg5  old_original_notebook.ipynb
scripts/: py.py  run_maddm.sh
src/madpy/: __init__.py
